<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.application.bank.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/bank_logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="64dp"
            android:background="@drawable/bank_logo"
            android:contentDescription="@string/logo_desc"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_left_margin"
            android:layout_marginLeft="@dimen/dimen_left_margin"
            android:layout_marginTop="@dimen/dimen_top_margin"
            android:layout_marginEnd="@dimen/dimen_right_margin"
            android:layout_marginRight="@dimen/dimen_right_margin"
            android:background="@drawable/input_box_design"
            android:hint="@string/user_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dimen_padding_20dp"
            android:text="@={viewModel.userName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bank_logo" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_left_margin"
            android:layout_marginLeft="@dimen/dimen_left_margin"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="@dimen/dimen_right_margin"
            android:layout_marginRight="@dimen/dimen_right_margin"
            android:background="@drawable/input_box_design"
            android:hint="@string/password_hint"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_padding_20dp"
            android:text="@={viewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/btn_state"
            android:enabled="@{!viewModel.loading}"
            android:onClick="@{()->viewModel.onLogin()}"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.827" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>